--- a/ColorVision/Plugins/PluginManagerWindow.xaml
+++ b/ColorVision/Plugins/PluginManagerWindow.xaml
@@ -22,7 +22,7 @@
                 <Button Content="安装" Command="{Binding DownloadPackageCommand}" Margin="0,0,5,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,5,0">
-                <Button  Command="{Binding EditCommand}" Padding="2" Height="27" Width="27" >
+                <Button  Command="{Binding EditConfigCommand}" Padding="2" Height="27" Width="27" >
                     <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" RenderTransformOrigin="0.5,0.5"  FontSize="20" Foreground="{DynamicResource GlobalTextBrush}">
                         <TextBlock.RenderTransform>
                             <RotateTransform x:Name="rotateTransform21"/>
