--- a/Engine/ColorVision.Engine/Templates/Jsons/BlackMura/DisplayBlackMura.xaml
+++ b/Engine/ColorVision.Engine/Templates/Jsons/BlackMura/DisplayBlackMura.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ColorVision.Engine.Templates.Jsons.BlackMura.DisplayBinocularFusion"
+﻿<UserControl x:Class="ColorVision.Engine.Templates.Jsons.BlackMura.DisplayBlackMura"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,7 +12,7 @@
         <StackPanel>
             <DockPanel Margin="0,2">
                 <Button  Content="{x:Static properties:Resources.Calculate}" DockPanel.Dock="Right"  HorizontalAlignment="Right" Click="RunTemplate_Click" />
-                <TextBlock Text="双目融合" Width="60"/>
+                <TextBlock Text="BlackMura" Width="60"/>
                 <ComboBox x:Name="ComboxTemplate"  SelectedIndex="{Binding TemplateSelectedIndex}" Width="130" HorizontalAlignment="Left" Style="{StaticResource ComboBox.Small}" SelectedValuePath="Value" DisplayMemberPath="Key" />
                 <Grid Width="20" Margin="5,0" HorizontalAlignment="Left">
                     <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="15" Foreground="{DynamicResource GlobalTextBrush}"/>
