--- a/UI/ColorVision.UI/PropertyEditor/PropertyEditorWindow.xaml
+++ b/UI/ColorVision.UI/PropertyEditor/PropertyEditorWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ColorVision.UI.PropertyEditor.PropertyEditorWindow"
+﻿<Window x:Class="ColorVision.UI.PropertyEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorVision.UI.PropertyEditor"
+        xmlns:local="clr-namespace:ColorVision.UI"
         xmlns:ui ="http://schemas.lepo.co/wpfui/2022/xaml"
         xmlns:hc="https://handyorg.github.io/handycontrol"
         xmlns:properties ="clr-namespace:ColorVision.UI.Properties"
