--- a/Engine/ColorVision.Engine/Templates/Jsons/EditTemplateJson.xaml
+++ b/Engine/ColorVision.Engine/Templates/Jsons/EditTemplateJson.xaml
@@ -7,7 +7,7 @@
              xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance local:IEditTemplateJson}"
-             d:DesignHeight="450" d:DesignWidth="800" Height="450" Width="800">
+             d:DesignHeight="450" d:DesignWidth="600" Height="450" Width="600">
     <UserControl.Resources>
         <Style TargetType="{x:Type TextBlock}">
             <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}"/>
@@ -22,10 +22,14 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Border Grid.Row="0" Background="{DynamicResource  SecondaryRegionBrush}" BorderBrush="{DynamicResource BorderBrush}"  BorderThickness="1" CornerRadius="5"/>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="auto"/>
+            </Grid.ColumnDefinitions>
+        </Grid>
+        <avalonEdit:TextEditor Name="textEditor" FontFamily="Consolas" FontSize="10pt" Background="Transparent" SyntaxHighlighting="Json"  Margin="5"/>
 
-        <Border Grid.Row="0" Background="{DynamicResource  SecondaryRegionBrush}" BorderBrush="{DynamicResource BorderBrush}"  BorderThickness="1" CornerRadius="5"/>
-        <avalonEdit:TextEditor Name="textEditor" FontFamily="Consolas" FontSize="10pt" Background="Transparent" SyntaxHighlighting="Json"  Margin="5">
-        </avalonEdit:TextEditor>
         <StackPanel x:Name="FuncStackPanel"  Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,5,0,0">
             <Button x:Name="DescriptionButton" Content="注释" Margin="0,0,5,0" Click="Button_Click" Visibility="Collapsed"/>
             <Button Content="校验Json" Margin="0,0,5,0" Command="{Binding CheckCommand}"/>
