--- a/UI/ColorVision.Themes/Themes/Icons.xaml
+++ b/UI/ColorVision.Themes/Themes/Icons.xaml
@@ -11,7 +11,7 @@
     <SolidColorBrush x:Key="light-blue" Color="#005dba" Opacity="1" />
     <SolidColorBrush x:Key="light-green" Color="#1f801f" Opacity="1" />
     <System:Double x:Key="cls-1">0.75</System:Double>
-    
+
     <DrawingBrush x:Key="DISearch" Stretch="None">
         <DrawingBrush.Drawing>
             <DrawingGroup>
@@ -122,6 +122,52 @@
                 </DrawingGroup>
                 <DrawingGroup>
                     <GeometryDrawing Brush="{DynamicResource light-red}" Geometry="F1M8.207,7.5l5.147,5.146-.708.708L7.5,8.207,2.354,13.354l-.708-.708L6.793,7.5,1.646,2.354l.708-.708L7.5,6.793l5.146-5.147.708.708Z" />
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingBrush.Drawing>
+    </DrawingBrush>
+    <DrawingBrush x:Key="DISave" Stretch="None">
+        <DrawingBrush.Drawing>
+            <DrawingGroup>
+                <DrawingGroup >
+                    <GeometryDrawing Brush="{DynamicResource canvas}" Geometry="F1M16,16H0V0H16Z" />
+                </DrawingGroup>
+                <DrawingGroup>
+                    <GeometryDrawing Brush="{DynamicResource light-blue-10}" Geometry="F1M14.515,3.5v11h-13V1.5h11Z" />
+                    <GeometryDrawing Brush="{DynamicResource light-blue}" Geometry="F1M14.854,3.146l-2-2L12.5,1H1.5L1,1.5v13l.5.5h13l.5-.5V3.5ZM5,2h6V6H5Zm9,12H2V2H4V6.5l.5.5h7l.5-.5V2h.293L14,3.707Z" />
+                    <DrawingGroup Opacity="{DynamicResource cls-1}">
+                        <GeometryDrawing Brush="{DynamicResource light-blue}" Geometry="F1M13,8.5v6H12V9H4v5.5H3v-6L3.5,8h9Z" />
+                    </DrawingGroup>
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingBrush.Drawing>
+    </DrawingBrush>
+
+    <DrawingBrush x:Key="DIOpenFolder" Stretch="None">
+        <DrawingBrush.Drawing>
+            <DrawingGroup>
+                <DrawingGroup >
+                    <GeometryDrawing Brush="{DynamicResource canvas}" Geometry="F1M16,16H0V0H16Z" />
+                </DrawingGroup>
+                <DrawingGroup>
+                    <GeometryDrawing Brush="{DynamicResource light-yellow-10}" Geometry="F1M11.5,6V8H3.431l-.464.314L1.5,11.981V4.5h4L7,6h4.5Z" />
+                    <GeometryDrawing Brush="{DynamicResource light-yellow-25}" Geometry="F1M14.5,8.5l-2,5H1.5l2-5Z" />
+                    <GeometryDrawing Brush="{DynamicResource light-yellow-25}" Geometry="F1M12,13H11V9h1Z" />
+                    <GeometryDrawing Brush="{DynamicResource light-yellow}" Geometry="F1M14.431,8H12V5.5L11.5,5H11V8H3.431l-.464.314L2,10.8V5H5.293l1,1H8V5H6.707l-.853-.854L5.5,4h-4L1,4.5v8.864L1.431,14h11l.464-.314,2-5Zm-2.339,5H2.169l1.6-4h9.922Z" />
+                    <GeometryDrawing Brush="{DynamicResource light-blue}" Geometry="F1M14.854,2.146v.708l-2,2-.707-.708L13.293,3H12a2,2,0,0,0-2,2V6H9V5a3,3,0,0,1,3-3h1.293L12.147.854l.707-.708Z" />
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingBrush.Drawing>
+    </DrawingBrush>
+    <DrawingBrush x:Key="DIWordWrap" Stretch="None">
+        <DrawingBrush.Drawing>
+            <DrawingGroup>
+                <DrawingGroup >
+                    <GeometryDrawing Brush="{DynamicResource canvas}" Geometry="F1M16,16H0V0H16Z" />
+                </DrawingGroup>
+                <DrawingGroup>
+                    <GeometryDrawing Brush="{DynamicResource light-defaultgrey}" Geometry="F1M8,3.008a1.978,1.978,0,0,0-1,.278V1H6V7H7V6.729a1.969,1.969,0,0,0,1,.279,2,2,0,0,0,0-4Zm.013,3.026a1,1,0,1,1,1-1A1,1,0,0,1,8.013,6.034ZM4,3.286a1.978,1.978,0,0,0-1-.278,2,2,0,0,0,0,4,1.969,1.969,0,0,0,1-.279V7H5V3H4ZM2.993,6.034a1,1,0,1,1,1-1A1,1,0,0,1,2.993,6.034Zm.711,5.7.719.7A2,2,0,1,1,4.393,9.6l-.7.714a1,1,0,1,0-.7,1.716A.992.992,0,0,0,3.7,11.734Z" />
+                    <GeometryDrawing Brush="{DynamicResource light-blue}" Geometry="F1M15,5.5v6l-.5.5H7.679l1.677,1.678-.707.707-2.5-2.5v-.707l2.5-2.5.707.707L7.741,11H14V6H11V5h3.5Z" />
                 </DrawingGroup>
             </DrawingGroup>
         </DrawingBrush.Drawing>
