--- a/UI/ColorVision.ImageEditor/WindowCIE.xaml
+++ b/UI/ColorVision.ImageEditor/WindowCIE.xaml
@@ -26,35 +26,24 @@
                     <ToggleButton x:Name="ToggleButtonMouse"  IsChecked="{Binding ShowImageInfo}" >
                         <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImageMouse}"  Margin="-5"/>
                     </ToggleButton>
-                    <Button Command="{Binding ZoomUniform}"  Margin="1,0">
+                    <Button Command="{Binding ZoomUniformCommand}"  Margin="1,0">
                         <Image  Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImage1_1}"  Margin="-5"/>
                     </Button>
-                    <Button Command="{Binding ZoomIncrease}"  Margin="1,0">
+                    <Button Command="{Binding ZoomInCommand}"  Margin="1,0">
                         <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImagezoom_in}"   Margin="-5"/>
                     </Button>
-                    <Button  Command="{Binding ZoomDecrease}"  Margin="1,0">
+                    <Button  Command="{Binding ZoomOutCommand}"  Margin="1,0">
                         <Image  Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImagezoom_out}"  Margin="-5"/>
                     </Button>
-                    <Button Command="{Binding ZoomNone}"  Margin="1,0">
+                    <Button Command="{Binding ZoomNoneCommand}"  Margin="1,0">
                         <Image  Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImageexpend}"  Margin="-5"/>
                     </Button>
                     <TextBox  Background="Transparent" BorderThickness="1"  HorizontalContentAlignment="Center"  Text="{Binding ElementName=Zoombox1,Path=ContentMatrix.M11,StringFormat={}{0:P1}}" />
                     <ToggleButton  IsChecked="{Binding Measure}" Visibility="{Binding ImageEditMode,Converter={StaticResource bool2VisibilityConverter}}">
                         <Image  Style="{StaticResource ToolBarImage}"  Source="{DynamicResource DrawingImageruler}"  Margin="-5"/>
                     </ToggleButton>
-                    <ToggleButton  IsChecked="{Binding EraseVisual}" Margin="1,0" Click="Button7_Click" Visibility="{Binding ImageEditMode,Converter={StaticResource bool2VisibilityConverter}}">
-                        <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImageeraser}"  Margin="-5"/>
-                    </ToggleButton>
-
-                    <ToggleButton IsChecked="{Binding DrawCircle}" Margin="1,0" Visibility="{Binding ImageEditMode,Converter={StaticResource bool2VisibilityConverter}}">
-                        <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImageCircle}"  Margin="-5"/>
-                    </ToggleButton>
-                    <ToggleButton IsChecked="{Binding DrawRect}" Margin="1,0" Visibility="{Binding ImageEditMode,Converter={StaticResource bool2VisibilityConverter}}">
-                        <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImageRect}"  Margin="-5"/>
-                    </ToggleButton>
-                    <ToggleButton IsChecked="{Binding DrawPolygon}"  Visibility="{Binding ImageEditMode,Converter={StaticResource bool2VisibilityConverter}}"  >
-                        <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImagePolygon}"  Margin="-5"/>
-                    </ToggleButton>
+                    <Button Content="1976" Click="Button_Click" Margin="1,0">
+                    </Button>
                 </ToolBar>
             </ToolBarTray>
         </Grid>
