--- a/Engine/ColorVision.Engine/MQTT/MQTTToolWindow.xaml
+++ b/Engine/ColorVision.Engine/MQTT/MQTTToolWindow.xaml
@@ -25,10 +25,21 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="订阅列表" TextWrapping="WrapWithOverflow"  Width="15"/>
-                <ListView Grid.Column="1" x:Name="TopicListView" Margin="0" BorderThickness="0"  SelectionChanged="TopicListView_SelectionChanged">
+                <ListView Grid.Column="1" x:Name="TopicListView" Margin="0" Padding="0" BorderThickness="0"  SelectionChanged="TopicListView_SelectionChanged">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="{x:Type ListViewItem}" BasedOn="{StaticResource ListViewItemBaseStyle.Small}">
+                        </Style>
+                    </ListView.ItemContainerStyle>
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn>
+                            <GridView.ColumnHeaderContainerStyle>
+                                <Style TargetType="{x:Type GridViewColumnHeader}"  BasedOn="{StaticResource  GridViewColumnHeaderBase}">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                    <Setter Property="Background" Value="Red"/>
+                                    <Setter Property="BorderThickness" Value="0"/>
+                                </Style>
+                            </GridView.ColumnHeaderContainerStyle>
+                            <GridViewColumn Header="222">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
                                         <TextBlock Text="{Binding .}"/>
